# learning-haskell

./: README.md  hello.hs  notes-and-exercises.md
1-all-you-need-is-lambda/: notes-and-exercises.md
13-building-projects/hangman/: LICENSE  hangman.cabal
13-building-projects/hangman/data/: dict.txt
13-building-projects/hangman/src/: Main.hs
