name:                hangman
version:             0.1.0.0
synopsis:            Playing hangman
description:         Please see README.md
homepage:            https://github.com/mafaarto/learning-haskell
license:             BSD3
license-file:        LICENSE
author:              Martin Faartoft
maintainer:          martin.faartoft@gmail.com
copyright:           2016 Martin Faartoft
category:            Game
build-type:          Simple
cabal-version:       >=1.10

executable hangman
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , random
                     , split
